# abasic

./: Cargo.toml  README.md  build-web  build-web.bat  index.html  install  install.bat
abasic-cli/: Cargo.toml
abasic-cli/src/: cli_args.rs  stdio_interpreter.rs  stdio_printer.rs
abasic-core/: Cargo.toml
abasic-core/src/: arrays.rs  builtins.rs  data.rs  dim.rs  expression.rs  interner.rs  interpreter.rs  interpreter_error.rs  interpreter_output.rs  lib.rs  line_number_parser.rs  program.rs  program_lines.rs  random.rs  statement.rs  string_manager.rs  symbol.rs  syntax_error.rs  tokenizer.rs  variables.rs
abasic-core/src/analyzer/: diagnostic_message.rs  (+8 more)
abasic-core/tests/: analyzer_test.rs  interpreter_test.rs
abasic-lsp/: Cargo.toml  package-lock.json  package.json  tsconfig.json
abasic-lsp/src/: main.rs
abasic-lsp/ts/: extension.ts
abasic-web/: .gitignore  Cargo.toml  LICENSE_MIT  index.html  main.ts  package-lock.json  package.json  tsconfig.json  ui.ts
abasic-web/src/: lib.rs
abasic-web/ts/: main.ts  ui.ts  util.ts
abasic_cli/: Cargo.toml
abasic_cli/src/: cli_args.rs  main.rs  stdio_interpreter.rs
abasic_core/: Cargo.toml
abasic_core/src/: interpreter.rs  interpreter_error.rs  lib.rs  line_cruncher.rs  operators.rs  program.rs  tokenizer.rs
pkg/: abasic_web.js  abasic_web_bg.wasm
programs/: chemist.bas  hamurabi.bas
src/: builtins.rs  data.rs  dim.rs  interpreter.rs  interpreter_error.rs  main.rs  operators.rs  program.rs  stdio_interpreter.rs  stdio_printer.rs  syntax_error.rs  tokenizer.rs  value.rs
ts/: main.js  ui.js  util.js
