[package]
name = "abasic"
version = "0.1.0"
edition = "2021"
authors = ["Atul Varma <varmaa@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.2"
fastrand = "2.0.1"
rustyline = "13.0.0"
