[package]
name = "abasic-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = "1.0.195"
serde_json = "1.0.111"
abasic-core = { path = "../abasic-core" }
clap = { version = "4.4.12", features = ["derive"] }
